# reqwest-websocket

./: .gitignore  Cargo.toml  LICENSE  README.md  changelog.md  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  publish.yaml
examples/: hello_world.rs
examples/wasm/: Cargo.toml  README.md
examples/wasm/src/: app.rs  main.rs
src/: json.rs  lib.rs  middleware.rs  native.rs  protocol.rs  wasm.rs
wasm-example/: Cargo.toml  index.html
wasm-example/src/: app.rs
