[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reqwest = "0.12"
reqwest-websocket = { path = "../../" }
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
gloo-utils = "0.2"